<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="410dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    android:elevation="3dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/course_name"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/teacherName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/endTimeFild"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/courseTitle2"
            android:hint="@string/teacher_name"
            android:textColor="#000000"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/courseTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitle"
            android:layout_alignStart="@+id/courseTitle"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/teacher1"
            android:textColor="#000000"
            android:textSize="17dp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/dayText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitle2"
            android:layout_alignStart="@+id/courseTitle2"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/dayText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitle2"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/dayText"
            android:text="@string/extraText1"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/startTimeFild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitle2"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/dayText2"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/startTimeFild2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitle2"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/startTimeFild"
            android:text="@string/extraText2"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/endTimeFild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitle2"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/startTimeFild2"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/endTimeFild2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/courseTitle2"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/endTimeFild"
            android:text="@string/extraText3"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/roomFild"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dayText"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/roomFild2"
            android:hint="@string/room_no"
            android:textColor="#000000"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/roomFild2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dayText"
            android:layout_alignStart="@+id/dayText"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/room_no1"
            android:textColor="#000000"
            android:textSize="15dp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>