<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/nameIDForTeacher"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:autofillHints="Name"
        android:background="@drawable/input_boxcolor"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2ForTeacher"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="@+id/imageView2ForTeacher"
        app:layout_constraintTop_toBottomOf="@+id/imageView2ForTeacher"
        tools:ignore="LabelFor,RtlSymmetry" />

    <Button
        android:id="@+id/updateButtonForTeacherProfile"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/deptIDForTeacher"
        android:layout_alignStart="@+id/deptIDForTeacher"
        android:layout_alignEnd="@+id/deptIDForTeacher"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_duttom"
        android:text="@string/update"
        app:layout_constraintEnd_toEndOf="@+id/deptIDForTeacher"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/desID"
        app:layout_constraintTop_toBottomOf="@+id/desID" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="#3EAE43"
        android:gravity="center"
        android:text="@string/profile_update_panel"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/deptIDForTeacher"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_boxcolor"
        app:layout_constraintEnd_toEndOf="@+id/nameIDForTeacher"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameIDForTeacher"
        app:layout_constraintTop_toBottomOf="@+id/nameIDForTeacher" />

    <Spinner
        android:id="@+id/desID"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/input_boxcolor"
        app:layout_constraintEnd_toEndOf="@+id/nameIDForTeacher"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/deptIDForTeacher"
        app:layout_constraintTop_toBottomOf="@+id/deptIDForTeacher" />

    <ImageView
        android:id="@+id/imageView2ForTeacher"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:foregroundGravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/input_boxcolor"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/teacherCloseBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttons"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/updateButtonForTeacherProfile"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/teacherLogOutBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttons"
        android:text="@string/log_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/updateButtonForTeacherProfile"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>