<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/StudentNavigation"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABE4BA"
    tools:context=".teacherDeshboardActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePicTeacher"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/input_circle" />

    <TextView
        android:id="@+id/TeacherProfileNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/profilePicTeacher"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/profilePicTeacher"
        android:gravity="center|left"
        android:hint="@string/profile_name"
        android:textColor="#fff"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profilePicTeacher"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

    <TextView
        android:id="@+id/TeacherdepartmentTextFilde"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TeacherIDTextFilde2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="8dp"
        android:layout_toEndOf="@+id/profilePicTeacher"
        android:gravity="top|left"
        android:hint="@string/department_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profilePicTeacher"
        app:layout_constraintTop_toBottomOf="@+id/TeacherProfileNameText"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/TeacherIDTextFilde2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TeacherProfileNameText"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/profilePicTeacher"
        android:gravity="top|left"
        android:hint="@string/designation_"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/TeacherClassCounterBox"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profilePicTeacher"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/profilePicTeacher"
        app:layout_constraintTop_toBottomOf="@+id/profilePicTeacher" />

    <TextView
        android:id="@+id/TeacherExamCounterBox"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profilePicTeacher"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@+id/TeacherClassCounterBox"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/TeacherClassCounterBox"
        app:layout_constraintTop_toBottomOf="@+id/profilePicTeacher" />

    <TextView
        android:id="@+id/TeacherAssignmentCounterBox"
        android:layout_width="126dp"
        android:layout_height="40dp"
        android:layout_below="@+id/profilePicTeacher"
        android:layout_marginStart="0dp"
        android:layout_marginTop="70dp"
        android:layout_toEndOf="@+id/TeacherExamCounterBox"
        android:gravity="center"
        android:text="@string/_0"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/TeacherIDTextFilde2"
        app:layout_constraintStart_toEndOf="@+id/TeacherExamCounterBox"
        app:layout_constraintTop_toBottomOf="@+id/profilePicTeacher" />

    <TextView
        android:id="@+id/textView9Teacher"
        android:layout_width="150dp"
        android:layout_height="20dp"
        android:layout_below="@+id/profilePicTeacher"
        android:layout_alignStart="@+id/profilePicTeacher"
        android:layout_marginStart="0dp"
        android:layout_marginTop="50dp"
        android:gravity="center|left"
        android:text="@string/today_s_activity"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/TeacherClassCounterBox"
        app:layout_constraintStart_toStartOf="@+id/profilePicTeacher"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/textView10Teacher"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/TeacherClassCounterBox"
        android:layout_alignStart="@+id/TeacherClassCounterBox"
        android:layout_alignEnd="@+id/TeacherClassCounterBox"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/no_of_class"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/TeacherClassCounterBox"
        app:layout_constraintTop_toBottomOf="@+id/TeacherClassCounterBox" />

    <TextView
        android:id="@+id/textView11Teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TeacherAssignmentCounterBox"
        android:layout_alignStart="@+id/TeacherAssignmentCounterBox"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:text="@string/no_of_assignment"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView12Teacher"
        app:layout_constraintTop_toBottomOf="@+id/TeacherClassCounterBox" />

    <TextView
        android:id="@+id/textView12Teacher"
        android:layout_width="126dp"
        android:layout_height="20dp"
        android:layout_below="@+id/TeacherExamCounterBox"
        android:layout_alignStart="@+id/TeacherExamCounterBox"
        android:layout_alignEnd="@+id/TeacherExamCounterBox"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/no_of_exam"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/textView10Teacher"
        app:layout_constraintTop_toBottomOf="@+id/TeacherClassCounterBox" />

    <ImageView
        android:id="@+id/TeacherDashboardBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/FrameConatinerTeacher"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/input_box"
        android:contentDescription="@string/todo" />

    <FrameLayout
        android:id="@+id/FrameConatinerTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TeacherNavigationBtn"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/TeacherNavigationBtn"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView12Teacher"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="-25dp"
        android:background="@drawable/input_duttom"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:menu="@menu/menu_item_for_teacher" />

    <TextView
        android:id="@+id/timeDateFildTeacher"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_below="@+id/profilePicTeacher"
        android:layout_alignEnd="@+id/TeacherAssignmentCounterBox"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="0dp"
        android:gravity="center|right"
        android:textColor="#FFFFFF"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/moreBtnT"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_baseline_menu_24" />

</RelativeLayout>